# FILMSREVIEW

./: MovieReviews.postman_collection.json  MovieReviews_postman_collection.json  README.md  pyproject.toml
.github/workflows/: blank.yml  pytest.yml  test_lint.yml
moviereviews/accounts/: urls.py  views.py
moviereviews/accounts/templates/accounts/: loginaccount.html  signupaccount.html
moviereviews/movie/: forms.py  models.py  serializers.py  urls.py  views.py
moviereviews/movie/migrations/: 0001_initial.py
moviereviews/movie/static/movie/: styles.css
moviereviews/movie/templates/movie/: basepage.html  createreview.html  detail.html  home.html  movie_detail.html  movie_form.html  movie_list.html
moviereviews/moviereviews/: db_router.py  settings.py  urls.py
moviereviews/moviereviews/routers/: db_routers.py
moviereviews/templates/moviereviews/: base.html
tests/: test_example.py
