[tool.poetry]
name = "filmsreview"
version = "0.1.0"
description = ""
authors = ["MityaZhdan <dmitriyzhdan23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
pillow = "^9.5.0"
psycopg2 = "^2.9.6"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
dj-database-url = "^2.0.0"
django-environ = "^0.10.0"
pytest = "^7.3.1"
httpx = "^0.24.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
